Fixed Button on Safari

--- a/Fabio/style.css
+++ b/Fabio/style.css
@@ -199,7 +199,7 @@ p {
     text-align: center;
 }
 
-#imagem input {
+#imagem a {
     font-size: 3em;
     border: 0;
     border-radius: 10px;
@@ -208,14 +208,16 @@ p {
     height: 1.5em;
     color: white;
     outline: none;
+    padding: 10px;
+    cursor: pointer;
 }
 
-#imagem input:focus {
+#imagem a:focus {
     border: 0;
 }
 
 #imagem #gostosa {
-    margin: 10px auto 0 auto;
+    margin: 20px auto 0 auto;
 }
 
 #gostosa img {
